--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap');
 
 @font-face {
   font-family: 'Goku';
-  src: url('assets/fonts/Goku.ttf') format('truetype');
+  src: url('assets/fonts/goku/Goku.ttf') format('truetype');
 }
+
 @font-face {
-  font-family: 'Goku-Stencil';
-  src: url('assets/fonts/Goku Stencil.ttf') format('truetype');
+  font-family: 'TrumpGothic';
+  src: url('assets/fonts/trump/TrumpGothicPro.ttf') format('truetype');
 }
 
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Raleway', sans-serif;
+  /* font-family: 'Raleway', sans-serif; */
+  box-sizing: border-box;
 }
 :root {
   --primary: #6947ef;
-  --black: #0f0f0f;
+  --sec: #0acf83;
+  --black: #202020;
 
   --wfull: 100dvw;
   --hfull: 100dvh;
   --w768: 768px;
   --w425: 425px;
   --w375: 375px;
+
+  --ffGoku: 'Goku';
+  --ffTrumpGothic: 'TrumpGothic';
+  --ffRaleway: 'Raleway', sans-seri;
 }
 body {
   background: #0f0f0f;
   color: #fff;
-  width: 100dvw;
+  width: 100vw;
   height: 100%;
   position: relative;
   overflow-x: hidden;
+  font-family: 'Inter', sans-serif;
 }
 main {
   display: flex;
@@ -38,6 +47,7 @@ main {
   justify-content: center;
   flex-direction: column;
   width: inherit;
+  width: 100%;
 }
 
 .cursor {
@@ -123,6 +133,9 @@ main {
 @media (max-width: 768px) {
   #sectionText {
     font-size: 2rem;
+  }
+  .cursor__ball {
+    display: none;
   }
 }
 @media (max-width: 425px) {
