--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 :root {
   --primary: #6947ef;
   --sec: #0acf83;
+  --third: #00d4ff;
   --black: #202020;
 
   --wfull: 100dvw;
@@ -31,11 +32,12 @@
   --ffGoku: 'Goku';
   --ffTrumpGothic: 'TrumpGothic';
   --ffRaleway: 'Raleway', sans-seri;
+  --ffInter: 'Inter', sans-seri;
 }
 body {
   background: #0f0f0f;
   color: #fff;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   position: relative;
   overflow-x: hidden;
@@ -48,6 +50,12 @@ main {
   flex-direction: column;
   width: inherit;
   width: 100%;
+  z-index: 1;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 .cursor {
@@ -96,6 +104,7 @@ main {
   display: inline-block;
   transform: translateY(80%);
   opacity: 0;
+  color: var(--sec);
 }
 #circularOpening {
   width: var(--wfull);
