--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,12 +1,11 @@
 .heroContainer {
   width: 100%;
-  height: 100vh;
+  min-height: 93vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   position: relative;
-  margin-top: -5rem;
 }
 
 .name {
@@ -28,7 +27,7 @@
   font-size: 8rem;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke: 1px;
-  color: var(--primary);
+  color: var(--sec);
   position: absolute;
   top: -10px;
   left: -10px;
@@ -88,6 +87,9 @@
   width: 100%;
   margin: 1rem;
   margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @keyframes hovering {
   0% {
