--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-  /* width: 100%; */
+  width: 100%;
   /* height: 60px; */
   display: flex;
   justify-content: center;
@@ -32,7 +32,7 @@ nav .nav-list {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   gap: 1rem;
 }
 
