--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -1,3 +1,16 @@
 .homeContainer {
   width: inherit;
 }
+
+.linearGradient {
+  width: 500px;
+  height: 500px;
+  position: absolute;
+  top: -200px;
+  left: 50%;
+  transform: translate(-50%);
+  background: radial-gradient(circle, #0acf83 0%, #00d4ff 100%);
+  border-radius: 50%;
+  filter: blur(800px);
+  z-index: -1;
+}
