--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@
   --third: #00d4ff;
   --black: #202020;
 
-  --wfull: 100dvw;
-  --hfull: 100dvh;
+  --wfull: 100%;
+  --hfull: 100vh;
   --w768: 768px;
   --w425: 425px;
   --w375: 375px;
@@ -37,7 +37,7 @@
 body {
   background: #0f0f0f;
   color: #fff;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   position: relative;
   overflow-x: hidden;
@@ -48,7 +48,6 @@ main {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: inherit;
   width: 100%;
   z-index: 1;
 }
@@ -79,7 +78,7 @@ a {
 }
 
 #splashScreen {
-  width: var(--wfull);
+  width: 100%;
   height: 100vh;
   background: #000;
   z-index: 111;
