--- a/src/components/projectCard/ProjectCard.css
+++ b/src/components/projectCard/ProjectCard.css
@@ -12,10 +12,19 @@
   /* border: 1px solid #0acf83;
   box-shadow: 0px 4px 4px rgba(10, 207, 131, 0.25); */
   border-radius: 12px;
+  transition: all 0.5s linear;
+  transform-origin: top top;
+}
+
+.projectcard-container .pc-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
 }
 
 .projectcard-container .pc-body .projectPreview {
-  width: 280px;
+  width: 270px;
   height: 234px;
   overflow: hidden;
   background: #d9d9d9;
@@ -37,6 +46,15 @@
   background: #0acf83;
   border-radius: 5px;
   padding: 10px;
+  font-size: 16px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease-in-out;
+}
+.projectcard-container .pc-body .callTOAction .livePreview:hover {
+  font-size: 17px;
 }
 .projectcard-container .pc-body .head {
   display: flex;
