--- a/src/page/project/project.css
+++ b/src/page/project/project.css
@@ -1,21 +1,52 @@
 .projectContainer {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: row;
   width: 100%;
-  height: 93vh;
+  height: 100vh;
   padding: 0.5rem;
 }
 .projectContent {
-  display: flex;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   row-gap: 1rem;
   column-gap: 1rem;
+  padding: 1rem;
 }
 .projectContent .items {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media (max-width: 1400px) {
+  .projectContent {
+    width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (max-width: 1000px) {
+  .projectContent {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .projectContent {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 425px) {
+  .projectContent {
+    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media (max-width: 375px) {
+  .projectContent {
+    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
