--- a/src/page/project/project.css
+++ b/src/page/project/project.css
@@ -1,52 +1,79 @@
 .projectContainer {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
   padding: 0.5rem;
 }
+
 .projectContent {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   row-gap: 1rem;
   column-gap: 1rem;
   padding: 1rem;
+  color: white;
 }
+
 .projectContent .items {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-@media (max-width: 1400px) {
+.projectTitle {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-family: var(--ffGoku);
+  margin: 1rem;
+}
+.projectTitle .title-out {
+  font-family: var(--ffGoku);
+  font-size: 2.5rem;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px;
+  color: var(--sec);
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  z-index: -1;
+}
+.projectTitle .title {
+  font-family: 'Goku';
+  font-size: 2.5rem;
+}
+
+@media (max-width: 1600px) {
   .projectContent {
-    width: 100%;
     grid-template-columns: repeat(4, 1fr);
   }
 }
-@media (max-width: 1000px) {
+
+@media (max-width: 1300px) {
   .projectContent {
-    width: 100%;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
+
 @media (max-width: 768px) {
   .projectContent {
-    width: 100%;
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (max-width: 425px) {
+
+@media (max-width: 500px) {
   .projectContent {
-    width: 100%;
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
 @media (max-width: 375px) {
   .projectContent {
-    width: 100%;
     grid-template-columns: repeat(1, 1fr);
   }
 }
