--- a/src/page/contact/contactme.css
+++ b/src/page/contact/contactme.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   width: 98%;
   height: 93vh;
 }
