--- a/src/page/about/about.css
+++ b/src/page/about/about.css
@@ -1,10 +1,10 @@
 .aboutContainer {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   flex-direction: row;
   width: 100%;
-  height: 93vh;
+  height: max-content;
   max-width: 1400px;
   padding: 0.5rem;
   margin-top: 1rem;
@@ -138,6 +138,7 @@
   .aboutContainer {
     flex-direction: column;
     height: auto;
+    align-items: center;
   }
   .img1 {
     width: calc(100% - 80px);
