--- a/src/page/project/project.css
+++ b/src/page/project/project.css
@@ -1,7 +1,7 @@
 .projectContainer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   width: 100%;
   height: 100vh;
