--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,5 +1,6 @@
 .heroContainer {
   width: 100%;
+  /* height: 100vh; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,7 +123,7 @@
     font-size: 6rem;
   }
   .heroContainer {
-    margin-top: 5rem;
+    margin-top: 0rem;
   }
 }
 @media (max-width: 425px) {
@@ -139,7 +140,7 @@
     margin-top: 0rem;
   }
   .weather {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 @media (max-width: 375px) {
