--- a/src/page/contact/contactme.css
+++ b/src/page/contact/contactme.css
@@ -4,7 +4,8 @@
   justify-content: center;
   flex-direction: column;
   width: 98%;
-  height: 90vh;
+  margin-bottom: 5rem;
+  position: relative;
 }
 .contactme {
   display: flex;
@@ -12,10 +13,11 @@
   align-items: center;
   background: #202020;
   border-radius: 8px;
-  width: 50%;
-  height: 500px;
+  width: 70%;
+  height: max-content;
   flex-direction: column;
-  padding: 3rem 0;
+  padding: 1rem 0;
+  margin-top: 2rem;
 }
 
 .contactme > p {
@@ -59,9 +61,24 @@
   border-radius: 0.5rem;
   color: #fff;
   width: 100%;
-  height: 15%;
+  padding: 1rem;
   margin: 0.3rem;
   font-size: 18px;
+}
+.contactme button:hover {
+  background: #08aa6c;
+}
+
+.copyrighted {
+  position: absolute;
+  bottom: -60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  text-align: center;
+}
+.copyrighted a {
+  text-decoration: underline;
 }
 
 @media (max-width: 768px) {
