--- a/src/page/home/home.css
+++ b/src/page/home/home.css
@@ -1,6 +1,6 @@
 .homeContainer {
   width: inherit;
-  height: 90vh;
+  height: 100vh;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -22,22 +22,25 @@
 
 @media (max-width: 450px) {
   .linearGradient {
-    width: 450px;
+    width: 400px;
     height: 300px;
-    top: -200px;
+    top: -100px;
+  }
+  .homeContainer {
+    height: 100vh;
   }
 }
 @media (max-width: 425px) {
   .linearGradient {
-    width: 420px;
+    width: 300px;
     height: 300px;
-    top: -200px;
+    top: -100px;
   }
 }
 @media (max-width: 375px) {
   .linearGradient {
     width: 300px;
     height: 300px;
-    top: -200px;
+    top: -50px;
   }
 }
