--- a/src/page/project/project.css
+++ b/src/page/project/project.css
@@ -4,17 +4,19 @@
   justify-content: flex-start;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: max-content;
   padding: 0.5rem;
+  max-width: 1040px;
 }
 
 .projectContent {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  row-gap: 1rem;
-  column-gap: 1rem;
-  padding: 1rem;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 2rem 0px;
+  place-items: center;
+  gap: 1rem 1rem;
   color: white;
+  margin: 1rem;
 }
 
 .projectContent .items {
@@ -48,19 +50,7 @@
   font-size: 2.5rem;
 }
 
-@media (max-width: 1600px) {
-  .projectContent {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media (max-width: 1300px) {
-  .projectContent {
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-@media (max-width: 768px) {
+@media (max-width: 1100px) {
   .projectContent {
     grid-template-columns: repeat(2, 1fr);
   }
